# nxbt

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.old.md  pyproject.toml  setup.py  sources.list  vagrant_setup.py
.github/workflows/: build-docker-image.yml  clear-cache.yml  docker-image-gnu.yml  docker-image-musl  docker-image-musl.yml  docker-image.yml
docker/: cli.py  entrypoint.py  entrypoint.spec  requirements.txt  tui.py
docker/gnu/: Dockerfile
docker/musl/: Dockerfile
docker/web/: app.py
lib/: setup.py
lib/Xlib/protocol/: request.pyx
lib/bumble/: hci.pyx  l2cap.pyx
nxbt/: __init__.py  __main__.py  bluez.py  cli.py  logging.py  nxbt.py  tui.py  utils.py
nxbt/backends/: __init__.py  base.py  bluez.py  bumble.py
nxbt/backends/internal/: bluez.py  usb.py
nxbt/controller/: controller.py  input.py  protocol.py  server.py  utils.py
nxbt/controller/sdp/: __init__.py
nxbt/web/: app.py  cert.py
nxbt/web/static/js/: main.js
nxbt/web/templates/: index.html
scripts/: README.txt  crash_switch.py  demo.py  demo_loop.py  proxy.py  reconnect_proxy.py  reconnect_test.py  sticks.py  switch_emu.py  testbt.py  vagrant_setup.py
tests/: conftest.py  test_backends.py  test_bluez.py  test_bumble.py  test_cli.py  test_nxbt.py  test_tui.py  test_wbapp_macro.py
