[project]
name = "nxbt"
version = "0.1.4"
description = "Control your Nintendo Switch through a website, terminal, or macro."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Reece Walsh", email = "reece@brikwerk.com"}
]
license = {text = "MIT"}
keywords = ["nintendo", "switch", "bluetooth", "macro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "dbus-python==1.2.16",
    "Flask==2.1.3",
    "Flask-SocketIO==5.3.4",
    "eventlet==0.33.3",
    "blessed==1.17.10",
    "pynput==1.7.1",
    "psutil==5.6.6",
    "cryptography==3.3.2",
    "jinja2==3.0.3",
    "itsdangerous==2.0.1",
    "Werkzeug==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/Brikwerk/nxbt"
Repository = "https://github.com/Brikwerk/nxbt"
Issues = "https://github.com/Brikwerk/nxbt/issues"

[project.scripts]
nxbt = "nxbt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "nxbt/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["nxbt"]

# 测试配置 (如果需要的话)
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.flake8]
max-line-length = 100
exclude = [".git", ".eggs", "__pycache__", "tests/", "docs/", "build/", "dist/"]