[project]
name = "nxbt"
version = "0.1.0"
description = "Control your Nintendo Switch through a website, terminal, or macro."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Reece Walsh", email = "reece@brikwerk.com"},
    {name = "Yutao Chen", email = "chenyutao0706@gmail.com"}
]
license = "MIT"
keywords = ["nintendo", "switch", "bluetooth", "macro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "Flask==3.1.0",
    "Flask-SocketIO==5.3.4",
    "eventlet==0.40.3",
    "blessed==1.17.10",
    "pynput==1.6.8",  # 1.7.0+ depends on evdev, which has no pre-built Linux wheels
    "psutil==7.2.1",
    "cryptography>=44.0.3",
    "jinja2==3.1.2",
    "itsdangerous==2.2",
    "Werkzeug==3.1.0",
    "dbus-fast==2.45.1",
    "bumble==0.0.229",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/typenoob/nxbt"
Repository = "https://github.com/typenoob/nxbt"
Issues = "https://github.com/typenoob/nxbt/issues"

[project.scripts]
nxbt = "nxbt.cli:main"

[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nxbt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]

url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "ruff==0.14.4",
    "pytest<=9.0.1",
    "pylint==4.0.5",
]
